# geimmeiker

./: CMakeLists.txt  compile_commands.json
org/: day1.org  day2.org
src/: Boid.cpp  Boid.hpp  Controls.cpp  Controls.hpp  GMApp.cpp  GMApp.hpp  GMWindow.hpp  Grid.cpp  Grid.hpp  Model.cpp  Model.hpp  SceneObject.cpp  SceneObject.hpp  Shader.cpp  Shader.hpp  main.cpp
